@@ -1,0 +1,8 @@
+#!/bin/sh
+
+startup_path=$1
+hardware_id=$2
+device_id=$3
+status=$4
+
+echo "startup_path=${startup_path}, hardware_id=${hardware_id}, device_id=${device_id}, status=${status}"
