@@ -1,0 +1,8 @@
+@echo off
+set startup_path=%1
+set hardware_id=%2
+set device_id=%3
+set status=%4
+
+:: %startup_path% %hardware_id% %device_id% %status%
+
